--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -24,23 +24,25 @@
 					<div class= "form_error" th:if="${#fields.hasErrors('typeId')}" th:errors="*{typeId}"></div>
 				</div>
 				<div class="form_title">
-					<label>やること</label>
+					<label>タイトル（必須）</label>
 					<div class= "form_error" th:if="${#fields.hasErrors('title')}" th:errors="*{title}"></div>
 					<input type="text" name="title" th:value="*{title}" /><br>
 				</div>	
 				<div class="form_detail">
-					<label>詳細</label>
+					<label>詳細（必須）</label>
 					<div class= "form_error" th:if="${#fields.hasErrors('detail')}" th:errors="*{detail}"></div>
 					<input type="text" name="detail" th:value="*{detail}" />
 					
 				</div>
 				<div class="form_deadline">
-					<label>期限</label>
+					<label>期限（必須）</label>
 					<div class= "form_error"  th:if="${#fields.hasErrors('deadline')}" th:errors="*{deadline}"></div>
 					<input type="datetime-local" name="deadline" th:value="*{deadline}" />
 				</div>
 				<input  th:if="${taskId}" type="hidden" name="taskId" th:value="${taskId}">
-				<input type="submit" value="作成">
+				<input  th:if="${taskForm.isnewTask}" type="submit" value="登録">
+				<input th:unless="${taskForm.isnewTask}" type="submit" value="更新">
+				
 			</form>
 		</div>
 		<div class="contents">
@@ -58,7 +60,7 @@
 					<tr th:each="obj : ${list}">
 						<td th:text=${obj.id}></td>
 						<td th:text=${obj.title}></td>
-						<td th:text=${obj.deadline}></td>
+						<td th:text="${#temporals.format(obj.deadline, 'yyyy/MM/dd HH:mm')}"></td>
 						<td th:text=${obj.taskType.type}></td>
 						<td><a th:href="@{/{id}(id=${obj.id})}" >編集</a></td>
 						<td>
