--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -101,6 +101,7 @@ input[type="submit"] {
     border: solid 1px #2c3e50;
     overflow: hidden;
     white-space: nowrap;
+    text-align: center;
 }
 
 .task-table th{
